# eyeBlinkBehaviour

./: .gitignore  .gitmodules  CMakeLists.txt  DEPENDENCIES  HOWTO.md  Makefile  Makefile.arduino.in  Makefile.in  NOTES  README.md  blinky.py  bootstrap.sh  build_and_upload.sh  camera_arduino_client.py.in  copy_file.sh.in  do_experiment.sh  get_serial_ports.py  live.gnuplot  mouse_server.py  read_data.hs  read_mouse_delta.py  record_and_plot.sh  run.sh.in  sanity_check_before_run.sh  test.sh  test_threadmill.py
CAD/: EncoderWheel_100mm_48Slits.scad  EncoderWheel_100mm_48Slits.stl  EncoderWheel_100mm_64Slits.scad  EncoderWheel_120mm_64_Slits.stl  Makefile  encoder_wheel.scad  encoder_wheel.stl  encoder_wheel_48_32.scad  encoder_wheel_variable_second_strip.scad  lock.scad  lock.stl  parsetab.py  wheel_design.py
MouseReader/: README.md  mouse.py  read_mouse_delta.py
PointGreyCamera/: CMakeLists.txt  NOTES.md  README.md  camera_client.py  config.h.in  run.sh
PointGreyCamera/camera_config_xml/: SFNC_GenTLDataStream_GigE_Version_1_0_0_Schema_1_1.xml  SFNC_GenTLInterface_GigE_Version_1_0_0_Schema_1_1.xml
PointGreyCamera/cmake/: FindOpenCV.cmake
PointGreyCamera/include/: boost_socket.h  unix-server.h
PointGreyCamera/src/: Streamer.hpp  TiffWriter.hpp  main.cpp
PointGreyCamera/src/Acquisition/: Makefile
PointGreyCamera/tests/: test_socket.cc
analysis/: Makefile  analyze_data.py  analyze_dir.py  analyze_mouse_performance.py  analyze_speed_dir_data.py  analyze_trial.py  analyze_trial_video.py  config.py  get_data_line_from_tiff.py  run_on_all_session.sh  session_type.py
analysis/old/: analyze_data.py_deprecated  analyze_dir.py  reformat.py  session_type.py
config/: get_serial_ports.py
eye-Blink_Conditioning/: ChangePhase.cpp  ChangePhase.h  DetectBlinks.cpp  DetectBlinks.h  Globals.h  Initialize.cpp  Initialize.h  LCDRelated.cpp  LCDRelated.h  Makefile  PhaseChangeRoutine.cpp  Profiling.h  Solenoid.cpp  Solenoid.h  TriggerImaging.cpp  TriggerImaging.h  ananth_TraceEBAnalysis_20151016.m  eye-Blink_Conditioning.ino  eyeBlinkDataSave.py  eye_Blink_Conditioning.ino  main.cpp  read_save_aduino_data.py  read_save_arduino_data.py
eye-Blink_Conditioning.xcodeproj/: project 0.pbxproj  project.pbxproj
eye-Blink_Conditioning.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
eye-Blink_Conditioning.xcodeproj/xcuserdata/ananth.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
eye-Blink_Conditioning.xcodeproj/xcuserdata/ananth.xcuserdatad/xcschemes/: All.xcscheme  Boards.xcscheme  Build.xcscheme  Index.xcscheme  Serial.xcscheme  Upload.xcscheme  xcschememanagement.plist
eye-Blink_Conditioning/Builds/: CDC.cpp.d  ChangePhase.cpp.d  DetectBlinks.cpp.d  HID.cpp.d  HardwareSerial2.cpp.d  IPAddress.cpp.d  Initialize.cpp.d  PhaseChangeRoutine.cpp.d  Stream.cpp.d  Tone.cpp.d  TriggerImaging.cpp.d  USBCore.cpp.d  embeddedcomputing.elf  embeddedcomputing.hex  main.cpp.d  wiring.c.d  wiring_analog.c.d  wiring_pulse.c.d
eye-Blink_Conditioning/Builds/libs/SPI/: SPI.cpp.d
eye-Blink_Conditioning/Configurations/: RedBearLab BLE Nano.xcconfig  RedBearLab nRF51822.xcconfig
eye_Blink_Conditioning/: DetectBlinks.cpp  Globals.h  Initialize.cpp  Makefile  ReadMe.txt  eye_Blink_Conditioning.ino
eye_Blink_Conditioning/Builds/: HardwareSerial.cpp.d  HardwareSerial0.cpp.d  HardwareSerial1.cpp.d  HardwareSerial3.cpp.d  LCDRelated.cpp.d  LocalLibrary.cpp.d  Print.cpp.d  Solenoid.cpp.d  WInterrupts.c.d  embeddedcomputing.hex  main.cpp.d  wiring_digital.c.d  wiring_shift.c.d
eye_Blink_Conditioning/Builds/libs/LiquidCrystal/src/: LiquidCrystal.cpp.d
eye_Blink_Conditioning/Builds/libs/SoftwareSerial/: SoftwareSerial.cpp.d
eye_Blink_Conditioning/Builds/libs/Wire/: Wire.cpp.d
eye_Blink_Conditioning/Builds/libs/Wire/utility/: twi.c.d
makefiles/: Arduino.mk
matlab/: ananth_EyeBlinkAnalysis.m  ananth_EyeBlinkAnalysis_20151221.m  ananth_EyeBlinkAnalysis_20151221_0.m  ananth_EyeBlinkAnalysis_20151222to24.m  ananth_EyeBlinkAnalysis_20151222to24_0.m  ananth_EyeBlinkAnalysis_20151225to20160104.m  ananth_TraceEBAnalysis_20151016.m  blinkFilter.m  getInfo.m  plotWeek_TEC.m
pyblink/: arduino.py  arduino_live  config.py
python/: arduino.py  arduino_live  config.py  eyeBlinkDataSave.py  mysql_support.py  read_save_arduino_data.py  reset_boards.py
scripts/: build_and_upload.sh  camera_reset.sh  find_Logitech_mouse.sh  list_serial_ports.sh  record_and_plot.sh  reset_all_boards.sh
src/: ChangePhase.cpp  DetectBlinks.cpp  DetectBlinks.h  DetectMotion.cpp  DetectMotion.h  Globals.cpp  Globals.h  Initialize.cpp  Initialize.h  LCDRelated.cpp  LCDRelated.h  TriggerVideo.cpp  TriggerVideo.h  VideoTrigger.cpp  VideoTrigger.h  ananth_TraceEBAnalysis_20151016.m  config.h.in  eyeBlinkDataSave.py  eye_blink_main.ino  main.cpp  main.ino  random_trial.c  random_trial.h
src/arduino-ps2-mouse/: PS2Mouse.cpp
src/eye_blink_main/: ChangePhase.cpp  ChangePhase.h  DetectBlinks.cpp  DetectBlinks.h  Distractor.h  Globals.cpp  Globals.h  Initialize.cpp  LCDRelated.cpp  LCDRelated.h  PhaseChangeRoutine.cpp  Profiling.h  ReadMe.txt  Solenoid.cpp  Solenoid.h  TriggerImaging.cpp  TriggerImaging.h  eye_blink_main.ino  main.cpp
